[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/MainMenu/Selected.png" type="Texture" id=1]
[ext_resource path="res://TowerDefense.gd" type="Script" id=2]
[ext_resource path="res://assets/Player/alienPunch1.png" type="Texture" id=3]
[ext_resource path="res://assets/MainMenu/botaoSeta.png" type="Texture" id=4]

[node name="TowerDefense" type="TextureButton"]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 25.7361
margin_top = 14.5764
margin_right = 74.7361
margin_bottom = 86.5764
rect_clip_content = true
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 3 )
expand = true

[node name="Right" type="TextureButton" parent="."]
margin_left = 102.104
margin_top = 32.9201
margin_right = 109.104
margin_bottom = 67.9201
texture_normal = ExtResource( 4 )
expand = true

[node name="Left" type="TextureButton" parent="."]
margin_left = -3.08688
margin_top = 67.5968
margin_right = 3.91312
margin_bottom = 102.597
rect_rotation = 180.0
texture_normal = ExtResource( 4 )
expand = true

[connection signal="button_up" from="." to="." method="_on_TowerDefense_button_up"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
